--- a/Playground.ipynb
+++ b/Playground.ipynb
@@ -5,7 +5,7 @@
    "id": "da36ec53",
    "metadata": {},
    "source": [
-    "# Información "
+    "# Información  asd\n"
    ]
   },
   {
@@ -3930,7 +3930,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3944,7 +3944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
